style: use theme classes

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 <section id="hero" class="hero min-h-[60vh] bg-gradient-to-r from-pink-600 to-purple-700 text-center py-20 overflow-hidden relative">
     <div id="stars" class="stars absolute inset-0 pointer-events-none"></div>
     <div class="hero-content flex flex-col" data-aos="zoom-in">
-      <h1 class="text-6xl font-extrabold mb-4 text-white drop-shadow-lg">MiniTools Universe</h1>
-      <p class="mb-6 text-white/90">Quick, lightweight utilities that work offline.</p>
+      <h1 class="text-6xl font-extrabold mb-4 text-text drop-shadow-lg">MiniTools Universe</h1>
+      <p class="mb-6 text-text opacity-90">Quick, lightweight utilities that work offline.</p>
       <div class="relative w-full max-w-md mx-auto mt-4">
         <input id="search" x-model="search" placeholder="Search tools..." aria-label="Search tools" class="input input-bordered w-full pl-10" />
         <span class="absolute left-3 top-1/2 -translate-y-1/2 text-accent"><i class="fa-solid fa-search"></i></span>
