--- a/tools/age-calculator/index.html
+++ b/tools/age-calculator/index.html
@@ -24,7 +24,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Age Calculator","operatingSystem":"Any","applicationCategory":"Calculator","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I calculate my age?","acceptedAnswer":{"@type":"Answer","text":"Enter your birthdate and the tool displays your age automatically."}},{"@type":"Question","name":"Is the Age Calculator free?","acceptedAnswer":{"@type":"Answer","text":"Yes, it is completely free to use."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"After the first load, you can use the calculator without internet."}},{"@type":"Question","name":"Is my birthdate stored?","acceptedAnswer":{"@type":"Answer","text":"No data is saved; everything runs in your browser."}},{"@type":"Question","name":"Can I calculate someone else's age?","acceptedAnswer":{"@type":"Answer","text":"Yes, just enter any valid birthdate to get the age."}}]}</script>
 </head>
-<body>
+<body class="bg-background text-text font-inter">
   <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/age-calculator-cake.png" alt="" class="emoji" width="24" height="24" role="presentation"> Age Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
