--- a/tools/base64-encoder/index.html
+++ b/tools/base64-encoder/index.html
@@ -24,7 +24,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Base64 Encoder/Decoder","operatingSystem":"Any","applicationCategory":"Converter","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I encode text?","acceptedAnswer":{"@type":"Answer","text":"Type your text then click encode to get the base64 string."}},{"@type":"Question","name":"Can I decode a base64 string?","acceptedAnswer":{"@type":"Answer","text":"Yes, paste the base64 and click decode to see the original text."}},{"@type":"Question","name":"Is it secure?","acceptedAnswer":{"@type":"Answer","text":"Encoding is done locally so your data never leaves the page."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"After first visit, the tool runs without internet."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"Yes, the Base64 Encoder/Decoder is free to use."}}]}</script>
 </head>
-<body>
+<body class="bg-background text-text font-inter">
   <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/base64-encoder-keyboard.png" alt="" class="emoji" width="24" height="24" role="presentation"> Base64 Encoder/Decoder</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
