--- a/tools/basic-calculator/index.html
+++ b/tools/basic-calculator/index.html
@@ -26,7 +26,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I use the Basic Calculator?","acceptedAnswer":{"@type":"Answer","text":"Enter numbers and operations then press equal."}},{"@type":"Question","name":"Is this calculator free?","acceptedAnswer":{"@type":"Answer","text":"Yes, the Basic Calculator is completely free."}},{"@type":"Question","name":"Can I use it offline?","acceptedAnswer":{"@type":"Answer","text":"After first load, the page works offline."}},{"@type":"Question","name":"Does it handle negative numbers?","acceptedAnswer":{"@type":"Answer","text":"Yes, you can perform calculations with negative numbers."}},{"@type":"Question","name":"Is my data saved?","acceptedAnswer":{"@type":"Answer","text":"No personal data is stored."}}]}
 </script>
 </head>
-<body>
+<body class="bg-background text-text font-inter">
   <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/basic-calculator-emoji.png" alt="" class="emoji" width="24" height="24" role="presentation"> Basic Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
