--- a/tools/bmi-calculator/index.html
+++ b/tools/bmi-calculator/index.html
@@ -24,7 +24,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"BMI Calculator","operatingSystem":"Any","applicationCategory":"Calculator","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I use the BMI Calculator?","acceptedAnswer":{"@type":"Answer","text":"Enter your height and weight then press calculate to see your BMI."}},{"@type":"Question","name":"Is this calculator free?","acceptedAnswer":{"@type":"Answer","text":"Yes, the BMI Calculator is free and works offline."}},{"@type":"Question","name":"Are my numbers saved?","acceptedAnswer":{"@type":"Answer","text":"No data is stored; everything is processed in your browser."}},{"@type":"Question","name":"What units are supported?","acceptedAnswer":{"@type":"Answer","text":"Enter weight in kilograms and height in centimeters."}},{"@type":"Question","name":"What is a healthy BMI range?","acceptedAnswer":{"@type":"Answer","text":"A BMI between 18.5 and 24.9 is generally considered healthy."}}]}</script>
 </head>
-<body>
+<body class="bg-background text-text font-inter">
   <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/bmi-calculator-scale.png" alt="" class="emoji" width="24" height="24" role="presentation"> BMI Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
