--- a/tools/color-picker/index.html
+++ b/tools/color-picker/index.html
@@ -24,7 +24,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Color Picker","operatingSystem":"Any","applicationCategory":"Design","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I copy a color code?","acceptedAnswer":{"@type":"Answer","text":"Select a color and click the copy button next to the value you need."}},{"@type":"Question","name":"What formats are shown?","acceptedAnswer":{"@type":"Answer","text":"The picker displays HEX, RGB and HSL values for each color."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Yes, once loaded the color picker functions without an internet connection."}},{"@type":"Question","name":"Is my selection stored?","acceptedAnswer":{"@type":"Answer","text":"No information is saved; everything runs locally in your browser."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"The Color Picker is completely free to use."}}]}</script>
 </head>
-<body>
+<body class="bg-background text-text font-inter">
   <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/palette.png" alt="" class="emoji" width="24" height="24" role="presentation"> Color Picker</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
