--- a/tools/compound-interest-calculator/index.html
+++ b/tools/compound-interest-calculator/index.html
@@ -24,7 +24,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Compound Interest Calculator","operatingSystem":"Any","applicationCategory":"Calculator","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How is compound interest calculated?","acceptedAnswer":{"@type":"Answer","text":"Enter principal, rate, times per year, and years; the calculator computes total using the standard formula."}},{"@type":"Question","name":"Can I see the final balance?","acceptedAnswer":{"@type":"Answer","text":"Yes, it displays both interest earned and final balance."}},{"@type":"Question","name":"Is this tool free?","acceptedAnswer":{"@type":"Answer","text":"The calculator is free and works offline."}},{"@type":"Question","name":"Does it support monthly compounding?","acceptedAnswer":{"@type":"Answer","text":"Set compounding to 12 to calculate monthly."}},{"@type":"Question","name":"Are my inputs saved anywhere?","acceptedAnswer":{"@type":"Answer","text":"No, all data stays in your browser."}}]}</script>
 </head>
-<body>
+<body class="bg-background text-text font-inter">
   <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/compound-interest-chart.png" alt="" class="emoji" width="24" height="24" role="presentation"> Compound Interest Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
