--- a/tools/date-difference-calculator/index.html
+++ b/tools/date-difference-calculator/index.html
@@ -24,7 +24,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Date Difference Calculator","operatingSystem":"Any","applicationCategory":"Calculator","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I find days between two dates?","acceptedAnswer":{"@type":"Answer","text":"Select a start and end date to instantly see the number of days in between."}},{"@type":"Question","name":"Can I use past and future dates?","acceptedAnswer":{"@type":"Answer","text":"Yes, you can calculate differences for any pair of dates."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Once loaded, the calculator runs completely in your browser."}},{"@type":"Question","name":"Is my date information stored?","acceptedAnswer":{"@type":"Answer","text":"No information leaves your device; everything is calculated locally."}},{"@type":"Question","name":"Is the tool free?","acceptedAnswer":{"@type":"Answer","text":"Yes, this tool is free for unlimited use."}}]}</script>
 </head>
-<body>
+<body class="bg-background text-text font-inter">
   <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/date-diff-calendar.png" alt="" class="emoji" width="24" height="24" role="presentation"> Date Difference Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
