--- a/tools/dice-roller/index.html
+++ b/tools/dice-roller/index.html
@@ -24,7 +24,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Dice Roller","operatingSystem":"Any","applicationCategory":"Game","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I roll the dice?","acceptedAnswer":{"@type":"Answer","text":"Click the roll button and the dice image will show a random value."}},{"@type":"Question","name":"Can I roll multiple dice?","acceptedAnswer":{"@type":"Answer","text":"Press roll again to simulate tossing several dice and sum the results."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Yes, once loaded the Dice Roller functions without internet."}},{"@type":"Question","name":"Is my result stored?","acceptedAnswer":{"@type":"Answer","text":"No data is stored; each roll happens purely in your browser."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"This Dice Roller is completely free to use."}}]}</script>
 </head>
-<body>
+<body class="bg-background text-text font-inter">
   <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/dice-die.png" alt="" class="emoji" width="24" height="24" role="presentation"> Dice Roller</h1></div></header>
 <main id="main" data-aos="fade-in" class="container text-center animate__animated animate__fadeIn">
