--- a/tools/graphing-calculator/index.html
+++ b/tools/graphing-calculator/index.html
@@ -25,7 +25,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Graphing Calculator","operatingSystem":"Any","applicationCategory":"Calculator","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I graph a function?","acceptedAnswer":{"@type":"Answer","text":"Type an equation like x^2 in the input box and click Plot."}},{"@type":"Question","name":"Is the Graphing Calculator free?","acceptedAnswer":{"@type":"Answer","text":"Yes, you can use this tool without any cost or signup."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Once loaded, all scripts are cached so it works offline."}},{"@type":"Question","name":"Can I plot multiple functions?","acceptedAnswer":{"@type":"Answer","text":"Yes, separate functions with commas to see several graphs."}},{"@type":"Question","name":"Is it mobile friendly?","acceptedAnswer":{"@type":"Answer","text":"The responsive layout lets you plot equations on any device."}}]}</script>
 </head>
-<body>
+<body class="bg-background text-text font-inter">
   <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/graphing-calculator-chart.png" alt="" class="emoji" width="24" height="24" role="presentation"> Graphing Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
