--- a/tools/stopwatch/index.html
+++ b/tools/stopwatch/index.html
@@ -24,7 +24,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Stopwatch","operatingSystem":"Any","applicationCategory":"Utilities","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I start the stopwatch?","acceptedAnswer":{"@type":"Answer","text":"Click start to begin timing, stop to pause and reset to zero."}},{"@type":"Question","name":"Can I use keyboard shortcuts?","acceptedAnswer":{"@type":"Answer","text":"Yes, press space to start or stop and r to reset."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Yes, after the first load the stopwatch works without internet."}},{"@type":"Question","name":"Is data stored anywhere?","acceptedAnswer":{"@type":"Answer","text":"No information is sent or saved."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"Yes, the stopwatch is completely free to use."}}]}</script>
 </head>
-<body>
+<body class="bg-background text-text font-inter">
   <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/stopwatch.png" alt="" class="emoji" width="24" height="24" role="presentation"> Stopwatch</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
