--- a/tools/time-zone-converter/index.html
+++ b/tools/time-zone-converter/index.html
@@ -24,7 +24,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Time Zone Converter","operatingSystem":"Any","applicationCategory":"Utilities","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I convert times?","acceptedAnswer":{"@type":"Answer","text":"Select the source zone, the target zone and a time to see the converted value."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Yes, after the first visit you can use it without internet."}},{"@type":"Question","name":"Can I search for cities?","acceptedAnswer":{"@type":"Answer","text":"Use the built-in list to pick common cities quickly."}},{"@type":"Question","name":"Is daylight saving handled?","acceptedAnswer":{"@type":"Answer","text":"Yes, the browser's time zone data automatically includes daylight changes."}},{"@type":"Question","name":"Is it free to use?","acceptedAnswer":{"@type":"Answer","text":"The tool is free and stores no personal data."}}]}</script>
 </head>
-<body>
+<body class="bg-background text-text font-inter">
   <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/time-zone-converter-clock.png" alt="" class="emoji" width="24" height="24" role="presentation"> Time Zone Converter</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
