--- a/tools/triangle-area-calculator/index.html
+++ b/tools/triangle-area-calculator/index.html
@@ -24,7 +24,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Triangle Area Calculator","operatingSystem":"Any","applicationCategory":"Calculator","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I find triangle area?","acceptedAnswer":{"@type":"Answer","text":"Enter base and height then press calculate to see the area."}},{"@type":"Question","name":"Can I use different units?","acceptedAnswer":{"@type":"Answer","text":"Yes, the result is in the same units you enter for base and height."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"After your first visit, the tool runs entirely from your browser."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"Yes, the Triangle Area Calculator is completely free to use."}},{"@type":"Question","name":"Is my input saved?","acceptedAnswer":{"@type":"Answer","text":"No values are stored or sent anywhere; everything stays on your device."}}]}</script>
 </head>
-<body>
+<body class="bg-background text-text font-inter">
   <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/triangle-area-calculator-triangle.png" alt="" class="emoji" width="24" height="24" role="presentation"> Triangle Area Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
