--- a/tools/unit-converter/index.html
+++ b/tools/unit-converter/index.html
@@ -24,7 +24,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Unit Converter","operatingSystem":"Any","applicationCategory":"Converter","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I change units?","acceptedAnswer":{"@type":"Answer","text":"Choose the unit types from the dropdowns, enter a value, and the result updates automatically."}},{"@type":"Question","name":"Is there a cost?","acceptedAnswer":{"@type":"Answer","text":"No, the Unit Converter is completely free to use."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"After first load, all files are cached so it works offline."}},{"@type":"Question","name":"What units are supported?","acceptedAnswer":{"@type":"Answer","text":"It currently handles common length and weight units like meters, feet, kilograms, and pounds."}},{"@type":"Question","name":"Can I use it on mobile?","acceptedAnswer":{"@type":"Answer","text":"Yes, the layout is responsive for phones and tablets."}}]}</script>
 </head>
-<body>
+<body class="bg-background text-text font-inter">
   <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/unit-converter-cycle.png" alt="" class="emoji" width="24" height="24" role="presentation"> Unit Converter</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
