--- a/tools/countdown-timer/index.html
+++ b/tools/countdown-timer/index.html
@@ -24,7 +24,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Countdown Timer","operatingSystem":"Any","applicationCategory":"Utilities","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I start the timer?","acceptedAnswer":{"@type":"Answer","text":"Enter minutes and seconds and click start."}},{"@type":"Question","name":"Can I pause it?","acceptedAnswer":{"@type":"Answer","text":"Yes, you can pause and resume as needed."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Once loaded the timer works without internet."}},{"@type":"Question","name":"Will it alert me?","acceptedAnswer":{"@type":"Answer","text":"A simple beep sounds when time runs out."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"Yes, use the timer without any cost."}}]}</script>
 </head>
-<body>
+<body class="bg-background text-text font-inter">
   <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/countdown-timer-hourglass.png" alt="" class="emoji" width="24" height="24" role="presentation"> Countdown Timer</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
