--- a/tools/currency-converter/index.html
+++ b/tools/currency-converter/index.html
@@ -24,7 +24,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Currency Converter","operatingSystem":"Any","applicationCategory":"Converter","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I convert currencies?","acceptedAnswer":{"@type":"Answer","text":"Enter an amount, choose currencies and press convert."}},{"@type":"Question","name":"Are rates live?","acceptedAnswer":{"@type":"Answer","text":"This demo uses static rates so it also works offline."}},{"@type":"Question","name":"Can I add more currencies?","acceptedAnswer":{"@type":"Answer","text":"Currently USD, EUR and GBP are included for simplicity."}},{"@type":"Question","name":"Is it free to use?","acceptedAnswer":{"@type":"Answer","text":"Yes, there are no costs or tracking involved."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Yes, conversion happens locally after the first load."}}]}</script>
 </head>
-<body>
+<body class="bg-background text-text font-inter">
   <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/currency-converter-money.png" alt="" class="emoji" width="24" height="24" role="presentation"> Currency Converter</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
