--- a/tools/epoch-time-converter/index.html
+++ b/tools/epoch-time-converter/index.html
@@ -24,7 +24,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Epoch Time Converter","operatingSystem":"Any","applicationCategory":"Converter","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I convert to Unix time?","acceptedAnswer":{"@type":"Answer","text":"Enter a date and click convert to see the Unix timestamp."}},{"@type":"Question","name":"Can I convert from a timestamp?","acceptedAnswer":{"@type":"Answer","text":"Yes, paste the timestamp and click from epoch to see the date."}},{"@type":"Question","name":"Does it require internet?","acceptedAnswer":{"@type":"Answer","text":"No, calculations run entirely in your browser after first load."}},{"@type":"Question","name":"Is my input stored?","acceptedAnswer":{"@type":"Answer","text":"Your data never leaves the page so it stays private."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"Yes, the Epoch Time Converter is free and offline-ready."}}]}</script>
 </head>
-<body>
+<body class="bg-background text-text font-inter">
   <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/stopwatch.png" alt="" class="emoji" width="24" height="24" role="presentation"> Epoch Time Converter</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
