--- a/tools/markdown-editor/index.html
+++ b/tools/markdown-editor/index.html
@@ -25,7 +25,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Markdown Editor","operatingSystem":"Any","applicationCategory":"DeveloperTool","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I use the Markdown Editor?","acceptedAnswer":{"@type":"Answer","text":"Type Markdown on the left and the formatted HTML preview updates as you write."}},{"@type":"Question","name":"Does it save my text?","acceptedAnswer":{"@type":"Answer","text":"No, your notes stay local and disappear when you close the tab."}},{"@type":"Question","name":"Can I copy the HTML?","acceptedAnswer":{"@type":"Answer","text":"Yes, click the copy button under the preview to copy the rendered markup."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"This editor is free for personal and professional projects."}},{"@type":"Question","name":"Will it work offline?","acceptedAnswer":{"@type":"Answer","text":"After your first visit it loads from cache and works offline."}}]}</script>
 </head>
-<body>
+<body class="bg-background text-text font-inter">
   <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/markdown-editor-pencil.png" alt="" class="emoji" width="24" height="24" role="presentation"> Markdown Editor</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
