--- a/tools/paint-coverage-calculator/index.html
+++ b/tools/paint-coverage-calculator/index.html
@@ -24,7 +24,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Paint Coverage Calculator","operatingSystem":"Any","applicationCategory":"Calculator","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I use the Paint Coverage Calculator?","acceptedAnswer":{"@type":"Answer","text":"Enter the wall area and coverage per gallon to find out how many gallons are needed."}},{"@type":"Question","name":"Does it account for multiple coats?","acceptedAnswer":{"@type":"Answer","text":"Yes, specify the number of coats and the total is adjusted."}},{"@type":"Question","name":"Is it free?","acceptedAnswer":{"@type":"Answer","text":"Absolutely, the tool is free and works offline."}},{"@type":"Question","name":"Are my values saved?","acceptedAnswer":{"@type":"Answer","text":"No data is stored or sent anywhere."}},{"@type":"Question","name":"Can I change units?","acceptedAnswer":{"@type":"Answer","text":"The calculator uses square feet but you can convert units with the Unit Converter."}}]}</script>
 </head>
-<body>
+<body class="bg-background text-text font-inter">
   <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/palette.png" alt="" class="emoji" width="24" height="24" role="presentation"> Paint Coverage Calculator</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
