--- a/tools/pomodoro-timer/index.html
+++ b/tools/pomodoro-timer/index.html
@@ -24,7 +24,7 @@
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"SoftwareApplication","name":"Pomodoro Timer","operatingSystem":"Any","applicationCategory":"Productivity","offers":{"@type":"Offer","price":"0","priceCurrency":"USD"}}</script>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"How do I start a Pomodoro?","acceptedAnswer":{"@type":"Answer","text":"Press start to begin a 25-minute session. After it ends, take a short break."}},{"@type":"Question","name":"Can I change the timer length?","acceptedAnswer":{"@type":"Answer","text":"Yes, adjust the work and break durations before starting."}},{"@type":"Question","name":"Does it work offline?","acceptedAnswer":{"@type":"Answer","text":"Once loaded, the timer runs without internet."}},{"@type":"Question","name":"Will it alert me when time is up?","acceptedAnswer":{"@type":"Answer","text":"Yes, it plays a beep and shows a message when the session ends."}},{"@type":"Question","name":"Is my data saved?","acceptedAnswer":{"@type":"Answer","text":"No personal data is stored; settings remain in the browser only."}}]}</script>
 </head>
-<body>
+<body class="bg-background text-text font-inter">
   <a class="skip-link" href="#main">Skip to content</a>
 <header class="tool-header"><div class="container"><a href="../../index.html" class="logo">MiniTools</a><button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">&#127765;</button><h1><img src="../../assets/pomodoro-timer-tomato.png" alt="" class="emoji" width="24" height="24" role="presentation"> Pomodoro Timer</h1></div></header>
 <main id="main" data-aos="fade-in" class="container animate__animated animate__fadeIn">
